--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<script type="text/javascript" src="https://unpkg.com/acorn"></script>
-<!-- Load the Paper.js library -->
-<script type="text/javascript" src="js/paper-full.min.js"></script>
-<!-- Define inlined PaperScript associate it with myCanvas -->
-<script type="text/paperscript" src="js/index.js" canvas="myCanvas"></script>
-<link rel='stylesheet' href='css/main.css'>
+	<script type="text/javascript" src="https://unpkg.com/paper"></script>
+	<script type="text/javascript" src="https://unpkg.com/tone"></script>
+	<script type="text/paperscript" src="js/index.js" canvas="myCanvas"></script>
+	<link rel='stylesheet' href='css/main.css'>
 </head>
 <body>
 	<canvas id="myCanvas"  resize></canvas>
