--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<script type="text/javascript" src="https://unpkg.com/acorn"></script>
 	<script type="text/javascript" src="https://unpkg.com/paper"></script>
 	<script type="text/javascript" src="https://unpkg.com/tone"></script>
+	<script type='text/javascript' src='js/tonality.js'></script>
 	<script type="text/paperscript" src="js/index.js" canvas="myCanvas"></script>
 	<link rel='stylesheet' href='css/main.css'>
 </head>
