Refactor into KochSynth object

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 	<canvas id="myCanvas" resize></canvas>
-	<button id='startButton'>Start</button>
+	<div id='controls'>
+		<button id='startButton'>Start</button>
+
+	</div>
 </body>
 </html>
