--- a/index.html
+++ b/index.html
@@ -9,10 +9,69 @@
 	<link rel='stylesheet' href='css/main.css'>
 </head>
 <body>
-	<canvas id="myCanvas" resize></canvas>
-	<div id='controls'>
-		<button id='startButton'>Start</button>
+		<div id='parameters'>
 
+		<div class='parameter'>
+			<select id='tonic'>
+				<option value='60'>C</option>
+				<option value='61'>C#/Db</option>
+				<option value='62'>D</option>
+				<option value='63'>D#/Eb</option>
+				<option value='64'>E</option>
+				<option value='65'>F</option>
+				<option value='66'>F#/Gb</option>
+				<option value='67'>G</option>
+				<option value='68'>G#/Ab</option>
+				<option value='69'>A</option>
+				<option value='70'>A#/Bb</option>
+				<option value='71'>B</option>
+			</select>
+			<label for='tonic'>Tonic</label>
+		</div>
+
+		<div class='parameter'>
+			<select id='tonality'>
+				<option value='Major'>Major</option>
+				<option value='Minor'>Minor</option>
+				<option value='Pentatonic'>Pentatonic</option>
+				<option value='MinorPentatonic'>MinorPentatonic</option>
+				<option value='Phreygish'>Phreygish</option>
+			</select>
+			<label for='tonality'>Tonality</label>
+		</div>
+
+		<div class='parameter'>
+			<input type='text' name='tempo' id='tempo' size='3' value='120'>
+			<label for='tempo'>Tempo</label>
+		</div>
+
+
+
+		<div class='parameter'>
+			<select id='levels'>
+				<option value='1'>1</option>
+				<option value='2'>2</option>
+				<option value='3'>3</option>
+				<option value='4'>4</option>
+				<option value='5'>5</option>
+				<option value='6'>6</option>
+			</select>
+			<label for='levels'>Levels</label>
+		</div>
+
+		<div class='parameter'>
+			<input type='text' name='offset' id='offset' size='3' value='1'>
+			<label for='offset'>Offset</label>
+		</div>
+
+
+	</div>
+	<canvas id="myCanvas" resize></canvas>
+
+	<div id='controls'>
+
+
+		<button type='button' id='playPauseButton'>Play</button>
 	</div>
 </body>
 </html>
