Fixed bugs, updated UI

--- a/index.html
+++ b/index.html
@@ -48,14 +48,7 @@
 
 
 		<div class='parameter'>
-			<select id='levels'>
-				<option value='1'>1</option>
-				<option value='2'>2</option>
-				<option value='3'>3</option>
-				<option value='4'>4</option>
-				<option value='5'>5</option>
-				<option value='6'>6</option>
-			</select>
+			<input type='text' name='levels' id='levels' size='3' value='1'>
 			<label for='levels'>Levels</label>
 		</div>
 
@@ -70,8 +63,9 @@
 
 	<div id='controls'>
 
-
 		<button type='button' id='playPauseButton'>Play</button>
 	</div>
+
+	<div id='debug'>Debug</div>
 </body>
 </html>
