Minor UI updates

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel='stylesheet' href='css/main.css'>
 </head>
 <body>
+
+		<div id='title'>koch synth</div>
 		<div id='parameters'>
 
 		<div class='parameter'>
@@ -48,12 +50,12 @@
 
 
 		<div class='parameter'>
-			<input type='text' name='levels' id='levels' size='3' value='1'>
+			<input type='text' name='levels' id='levels' size='3' value='3'>
 			<label for='levels'>Levels</label>
 		</div>
 
 		<div class='parameter'>
-			<input type='text' name='offset' id='offset' size='3' value='1'>
+			<input type='text' name='offset' id='offset' size='3' value='0'>
 			<label for='offset'>Offset</label>
 		</div>
 
