--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
 		<button type='button' id='playPauseButton'>Play</button>
 	</div>
 
-	<div id='debug'>Debug</div>
+	<div id='debug'></div>
 </body>
 </html>
