Set some error-checking on controls.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>k o c h  s y n t h</title>
+	<meta name="description" content="A pattern sequencer based on Koch-type fractals.">
+	<meta name="author" content="Jesse Fischer">
+
+	<meta property="og:title" content="k o c h  s y n t h">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://jessefischer.github.io/koch-synth">
+	<meta property="og:description" content="A pattern sequencer based on Koch-type fractals.">
+
+
 	<script type="text/javascript" src="https://unpkg.com/acorn"></script>
 	<script type="text/javascript" src="https://unpkg.com/paper"></script>
 	<script type="text/javascript" src="https://unpkg.com/tone"></script>
 	<script type='text/javascript' src='js/tonality.js'></script>
 	<script type="text/paperscript" src="js/index.js" canvas="myCanvas"></script>
 	<link rel='stylesheet' href='css/main.css'>
+
 </head>
 <body>
 
