--- a/index.html
+++ b/index.html
@@ -82,5 +82,6 @@
 	</div>
 
 	<div id='debug'></div>
+	<div id='source'><a href='https://github.com/jessefischer/koch-synth'>Source</a></div>
 </body>
 </html>
