Add support for randomizeVelocity, and prettier-ify the code

--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
 			<label for='offset'>Offset</label>
 		</div>
 
+		<div class='parameter'>
+			<select id='randomizeVelocity'>
+				<option value='0'>0</option>
+				<option value='0.25'>0.25</option>
+				<option value='0.5'>0.5</option>
+				<option value='0.75'>0.75</option>
+				<option value='1.0'>1.0</option>
+			</select>
+			<label for='randomizeVelocity'>Randomize Velocity</label>
+		</div>
 
 	</div>
 	<canvas id="myCanvas" resize></canvas>
