--- a/index.html
+++ b/index.html
@@ -1,97 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>k o c h  s y n t h</title>
-	<meta name="description" content="A pattern sequencer based on Koch-type fractals.">
-	<meta name="author" content="Jesse Fischer">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>k o c h s y n t h</title>
+    <meta
+      name="description"
+      content="A pattern sequencer based on Koch-type fractals."
+    />
+    <meta name="author" content="Jesse Fischer" />
 
-	<meta property="og:title" content="k o c h  s y n t h">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://jessefischer.github.io/koch-synth">
-	<meta property="og:description" content="A pattern sequencer based on Koch-type fractals.">
+    <meta property="og:title" content="k o c h  s y n t h" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://jessefischer.github.io/koch-synth"
+    />
+    <meta
+      property="og:description"
+      content="A pattern sequencer based on Koch-type fractals."
+    />
 
+    <script type="text/javascript" src="https://unpkg.com/acorn"></script>
+    <script type="text/javascript" src="https://unpkg.com/paper"></script>
+    <script type="text/javascript" src="https://unpkg.com/tone"></script>
+    <script type="text/javascript" src="js/tonality.js"></script>
+    <script
+      type="text/paperscript"
+      src="js/index.js"
+      canvas="myCanvas"
+    ></script>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div id="title">koch synth</div>
+    <div id="parameters">
+      <div class="parameter">
+        <select id="tonic">
+          <option value="60">C</option>
+          <option value="61">C#/Db</option>
+          <option value="62">D</option>
+          <option value="63">D#/Eb</option>
+          <option value="64">E</option>
+          <option value="65">F</option>
+          <option value="66">F#/Gb</option>
+          <option value="67">G</option>
+          <option value="68">G#/Ab</option>
+          <option value="69">A</option>
+          <option value="70">A#/Bb</option>
+          <option value="71">B</option>
+        </select>
+        <label for="tonic">Tonic</label>
+      </div>
 
-	<script type="text/javascript" src="https://unpkg.com/acorn"></script>
-	<script type="text/javascript" src="https://unpkg.com/paper"></script>
-	<script type="text/javascript" src="https://unpkg.com/tone"></script>
-	<script type='text/javascript' src='js/tonality.js'></script>
-	<script type="text/paperscript" src="js/index.js" canvas="myCanvas"></script>
-	<link rel='stylesheet' href='css/main.css'>
+      <div class="parameter">
+        <select id="tonality">
+          <option value="Major">Major</option>
+          <option value="Minor">Minor</option>
+          <option value="Pentatonic">Pentatonic</option>
+          <option value="MinorPentatonic">MinorPentatonic</option>
+          <option value="Phreygish">Phreygish</option>
+        </select>
+        <label for="tonality">Tonality</label>
+      </div>
 
-</head>
-<body>
+      <div class="parameter">
+        <input type="text" name="tempo" id="tempo" size="3" value="120" />
+        <label for="tempo">Tempo</label>
+      </div>
 
-		<div id='title'>koch synth</div>
-		<div id='parameters'>
+      <div class="parameter">
+        <input type="text" name="levels" id="levels" size="3" value="3" />
+        <label for="levels">Levels</label>
+      </div>
 
-		<div class='parameter'>
-			<select id='tonic'>
-				<option value='60'>C</option>
-				<option value='61'>C#/Db</option>
-				<option value='62'>D</option>
-				<option value='63'>D#/Eb</option>
-				<option value='64'>E</option>
-				<option value='65'>F</option>
-				<option value='66'>F#/Gb</option>
-				<option value='67'>G</option>
-				<option value='68'>G#/Ab</option>
-				<option value='69'>A</option>
-				<option value='70'>A#/Bb</option>
-				<option value='71'>B</option>
-			</select>
-			<label for='tonic'>Tonic</label>
-		</div>
+      <div class="parameter">
+        <input type="text" name="offset" id="offset" size="3" value="0" />
+        <label for="offset">Offset</label>
+      </div>
 
-		<div class='parameter'>
-			<select id='tonality'>
-				<option value='Major'>Major</option>
-				<option value='Minor'>Minor</option>
-				<option value='Pentatonic'>Pentatonic</option>
-				<option value='MinorPentatonic'>MinorPentatonic</option>
-				<option value='Phreygish'>Phreygish</option>
-			</select>
-			<label for='tonality'>Tonality</label>
-		</div>
+      <div class="parameter">
+        <select id="randomizeVelocity">
+          <option value="0">0</option>
+          <option value="0.25">0.25</option>
+          <option value="0.5">0.5</option>
+          <option value="0.75">0.75</option>
+          <option value="1.0">1.0</option>
+        </select>
+        <label for="randomizeVelocity">Randomize Velocity</label>
+      </div>
 
-		<div class='parameter'>
-			<input type='text' name='tempo' id='tempo' size='3' value='120'>
-			<label for='tempo'>Tempo</label>
-		</div>
+      <div class="parameter">
+		  <div id='copy'>
+          <img
+            src="assets/content_copy_white_24dp.svg"
+            alt="Copy link to clipboard"
+          />
+		  </div>
+        <label for="copy">Copy link</label>
+      </div>
+    </div>
+    <canvas id="myCanvas" resize></canvas>
 
+    <div id="controls">
+      <button type="button" id="playPauseButton">Play</button>
+    </div>
 
-
-		<div class='parameter'>
-			<input type='text' name='levels' id='levels' size='3' value='3'>
-			<label for='levels'>Levels</label>
-		</div>
-
-		<div class='parameter'>
-			<input type='text' name='offset' id='offset' size='3' value='0'>
-			<label for='offset'>Offset</label>
-		</div>
-
-		<div class='parameter'>
-			<select id='randomizeVelocity'>
-				<option value='0'>0</option>
-				<option value='0.25'>0.25</option>
-				<option value='0.5'>0.5</option>
-				<option value='0.75'>0.75</option>
-				<option value='1.0'>1.0</option>
-			</select>
-			<label for='randomizeVelocity'>Randomize Velocity</label>
-		</div>
-
-	</div>
-	<canvas id="myCanvas" resize></canvas>
-
-	<div id='controls'>
-
-		<button type='button' id='playPauseButton'>Play</button>
-	</div>
-
-	<div id='debug'></div>
-	<div id='source'><a href='https://github.com/jessefischer/koch-synth'>Source</a></div>
-</body>
+    <div id="debug"></div>
+    <div id="source">
+      <a href="https://github.com/jessefischer/koch-synth">Source</a>
+    </div>
+  </body>
 </html>
