Added support for more tonalities

--- a/index.html
+++ b/index.html
@@ -57,9 +57,23 @@
         <select id="tonality">
           <option value="Major">Major</option>
           <option value="Minor">Minor</option>
+          <option value="HarmonicMinor">HarmonicMinor</option>
+          <option value="MelodicMinor">MelodicMinor</option>
+          <option disabled></option>
+          <option value="Dorian">Dorian</option>
+          <option value="Phrygian">Phrygian</option>
+          <option value="Lydian">Lydian</option>
+          <option value="Mixolydian">Mixolydian</option>
+          <option value="Aeolian">Aeolian</option>          
+          <option value="Locrian">Locrian</option>
+          <option disabled></option>
           <option value="Pentatonic">Pentatonic</option>
           <option value="MinorPentatonic">MinorPentatonic</option>
-          <option value="Phreygish">Phreygish</option>
+          <option disabled></option>
+          <option value="Freygish">Freygish</option>
+          <option value="MiSheberakh">MiSheberakh</option>
+          <option disabled></option>
+          <option value="Selisir">Selisir</option>
         </select>
         <label for="tonality">Tonality</label>
       </div>
