--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://jessefischer.github.io/koch-synth"
+      content="https://koch-synth.netlify.app"
     />
-    <meta
-      property="og:description"
-      content="A pattern sequencer based on Koch-type fractals."
-    />
+    <meta property="og:image" content="https://koch-synth.netlify.app/assets/site-preview.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="2880" />
+    <meta property="og:image:height" content="1800" />
+    
 
     <script type="text/javascript" src="https://unpkg.com/acorn"></script>
     <script type="text/javascript" src="https://unpkg.com/paper"></script>
